--- a/src/App.css
+++ b/src/App.css
@@ -84,3 +84,13 @@ label{
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05) !important;
 }
 
+.form-switch .form-check-input {
+  transform: scale(1.5);
+  margin-top: 0.5rem;
+  margin-left: -1.5rem;
+}
+
+.form-switch .form-check-label {
+  padding-left: 2.5rem;
+}
+
