--- a/src/App.css
+++ b/src/App.css
@@ -94,3 +94,14 @@ label{
   padding-left: 2.5rem;
 }
 
+.product-image-thumbnail{
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.product-image-thumbnail.active{
+  border: 2px solid #00D8FF !important;
+  height: 65px !important;
+  width: 65px !important;
+  box-shadow: 0 0 10px 0 #00D8FF !important;
+  transform: scale(1.1);
+}
