--- a/src/App.css
+++ b/src/App.css
@@ -131,4 +131,29 @@ label{
   background: #00D8FF!important;
 }
 
+.image-magnifier-container {
+  position: relative;
+  overflow: hidden;
+}
+
+.lens {
+  position: absolute;
+  border: 2px solid #000;
+  width: 100px;
+  height: 100px;
+  display: none;
+  background-repeat: no-repeat;
+  pointer-events: none;
+  border-radius: 50%; /* optional: makes it circular like Amazon */
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  cursor: crosshair;
+}
+
 
